fix: removed overflow from main

--- a/css/style.css
+++ b/css/style.css
@@ -815,9 +815,8 @@ h1 {
         --font-size-header: 9vmax;
     }
 
-
-    body {
-        background-color: blue;
+    main {
+        overflow: hidden;
     }
 
     header {
